--- a/PapaLoader.html
+++ b/PapaLoader.html
@@ -6,7 +6,7 @@
     <meta Http-Equiv="Cache-Control" Content="no-cache">
     <meta Http-Equiv="Pragma" Content="no-cache">
     <meta Http-Equiv="Expires" Content="0">
-    <title>DX Time Logger</title>
+    <title>PapaLoader v1.0</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS & Main stylesheet File -->
@@ -17,7 +17,7 @@
     <script src="assets/js/PapaLoader.js"></script>
 </head>
 <body>
-<div id="loader" class="paddsection" style="background-color: #F0F3F4;">
+<div id="loader" class="paddsection" style="background-color: none;">
     <div class="container">
       <div class="contact-block1">
         <div class="row">
@@ -40,7 +40,7 @@
           <div class="col-lg-8">
               <div class="row">
 
-                <div class="col-lg-6 data-loader">
+                <div class="col-lg-4 data-loader">
                   <form name="foo" method="post" enctype="multipart/form-data">
                   <input id="csvfile" type="file" value="i">
                   </form>
@@ -49,18 +49,21 @@
         <button id="create" type="button">Download</button>
         <button type="button" onClick="history.go(0)">&#8634;</button>
                 </div>  
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                   <textarea cols="50" rows="4" name="comment" class='tb' id='textbox'></textarea>
                 </div>
               </div>
-          </div>
-          <div id='plug' class="col-lg-12">
+              <div id='plug' class="col-lg-12">
+                <br/>
+
             <div id="myProgress">
-            <div id="myBar">10%</div>
+            <div id="myBar">0%</div>
             </div>
             <br>
-            <button onclick="move();">Click Me</button>
+            <input type="hidden" name="ClikeMe" onclick="move();">
           </div>
+          </div>
+          
         </div>
       </div>
     </div>
